Creando el footer, y haciendo la segunda pagina Sobre Nosotros

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <!-- Inicio de la barra de navegacion -->
     <header class="header">
         <div class="logo-header">
-            <a href="#">
-                <img src="/images/logo.png" alt="logo">
+            <a href="index.html">
+                <img src="images/logo.png">
             </a>
         </div>
         <nav class="nav-menu">
@@ -30,27 +30,28 @@
                 <i class="fa-solid fa-bars"></i>
             </label>
             <ul>
-                <li><a href="#">Sobre Nosotros</a></li>
-                <li><a href="#">Ventas</a></li>
-                <li><a href="#">Reparaciones</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="pages/nosotros.html">Sobre Nosotros</a></li>
+                <li><a href="pages/ventas.html">Ventas</a></li>
+                <li><a href="pages/reparaciones.html">Reparaciones</a></li>
+                <li><a href="pages/contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
 
 
     <!-- Inicio del main de la pagina -->
-    <main>
+    <main class="main-index">
+        <div class="main-space"></div>
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/images/6da8e836-f540-433a-a014-4e7e4a07b35b.jpg" class="d-block w-100 p-3" alt="...">
+                        <img src="images/6da8e836-f540-433a-a014-4e7e4a07b35b.jpg" class="d-block w-100 p-3" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="/images/40ea801b-45eb-4d34-a17c-106e867d0ab0.jpg" class="d-block w-100 p-3" alt="...">
+                        <img src="images/40ea801b-45eb-4d34-a17c-106e867d0ab0.jpg" class="d-block w-100 p-3" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="/images/149a8a8e-6db1-453c-9ac8-a575edeeb2bc.jpg" class="d-block w-100 p-3" alt="...">
+                        <img src="images/149a8a8e-6db1-453c-9ac8-a575edeeb2bc.jpg" class="d-block w-100 p-3" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
