media queris en index y nosotros

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/b6d7194d5a.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon">
+    <title>Sitek Srl</title>
 </head>
 
 <body>
@@ -41,6 +42,7 @@
 
     <!-- Inicio del main de la pagina -->
     <main class="main-index">
+<!-- Carrousel con boostrap -->
         <div class="main-space"></div>
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
