--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -12,7 +12,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/b6d7194d5a.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
+    <title>Sitek Srl Nosotros</title>
 </head>
 
 <body>
@@ -40,12 +41,32 @@
 
     <main class="main-nosotros">
         <div class="nosotros">
-            <h1>Sobre Nosotros</h1>
+            <h1 class="nosotros-title">Sobre Nosotros</h1>
             <p>Sitek es una empresa orientada al rubro de automatización industrial y control numérico, con 18 años de antigüedad en el mercado. Nuestro esfuerzo, constante capacitación, actualización, atención rápida y personalizada nos permite seguir brindando respuestas y soluciones a nuestros clientes al ritmo en que se mueve la industria.</p>
         </div>
-        
-<!-- Intentando boostrap grid -->
-        <div>
+
+
+        <div class="grid-nosotros">
+            <div class="grid-nosotros-card">
+                <h3>Laboratorio Propio</h3>
+                <p>Laboratorio de alta complejidad, estación de lavado de equipos y bancos de ensayo.
+                </p>
+            </div>
+
+            <div class="grid-nosotros-card">
+                <h3>+600 clientes activos</h3>
+                <p>Contamos con más de 600 clientes de todo el país. Cotizamos trabajos a cualquier provincia de la Argentina.</p>
+            </div>
+
+            <div class="grid-nosotros-card">
+                <h3>Años de experiencia</h3>
+                <p>Contamos con 20 años de antigüedad en el mercado, con esfuerzo constante, capacitación e inversión.</p>
+            </div>
+
+            <div class="grid-nosotros-card">
+                <h3>Garantia de 6 meses</h3>
+                <p>Todas nuestras reparaciones y productos de venta (NEW/USED) tienen garantía de 6 meses.</p>
+            </div>
         </div>
     </main>
 
