creando y aplicando maps, mixins y extends

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -13,6 +13,8 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/b6d7194d5a.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
+    <meta name="description" content="Vendemos y reparamos equipos electronicos">
+    <meta name="keywords" content="Reparaciones equipos electronicos, venta equipos electronicos, equipos electronicos">
     <title>Sitek Srl Nosotros</title>
 </head>
 
