--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/b6d7194d5a.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon">
+    <meta name="description" content="Vendemos y reparamos equipos electronicos">
+    <meta name="keywords" content="Reparaciones equipos electronicos, venta equipos electronicos, equipos electronicos">
     <title>Sitek Srl</title>
 </head>
 
@@ -25,7 +27,7 @@
             </a>
         </div>
         <nav class="nav-menu">
-
+<!-- label para el menu hamburguesa -->
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
                 <i class="fa-solid fa-bars"></i>
@@ -43,6 +45,9 @@
     <!-- Inicio del main de la pagina -->
     <main class="main-index">
 <!-- Carrousel con boostrap -->
+        <section class="sectionMap">
+            <h1 class="tittleMap">Bienvenidos a la pagina oficial de Sitek SRL</h1>
+        </section>
         <div class="main-space"></div>
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
