--- a/pages/ventas.html
+++ b/pages/ventas.html
@@ -13,8 +13,8 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/b6d7194d5a.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
-    <meta name="description" content="Vendemos y reparamos equipos electronicos">
-    <meta name="keywords" content="Reparaciones equipos electronicos, venta equipos electronicos, equipos electronicos">
+    <meta name="description" content="Somos una pequeña empresa que vende y repara equipos electrónicos.">
+    <meta name="keywords" content="Reparaciones equipos electronicos, venta equipos electronicos, equipos electronicos, Tester, Electricidad, Tecnicos Electronicos">
     <title>Sitek Srl Ventas</title>
 </head>
 
